--- a/Simulation_Galerie/css/style.css
+++ b/Simulation_Galerie/css/style.css
@@ -126,18 +126,23 @@ footer {
 .modal .arrow {
     position: absolute;
     top: 50%;
+    transform: translateY(-50%);
     font-size: 2rem;
     color: white;
     cursor: pointer;
     user-select: none;
+    padding: 0.5rem;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+    z-index: 1001;
 }
 
 .modal .arrow.left {
-    left: 10px;
+    left: 20px;
 }
 
 .modal .arrow.right {
-    right: 10px;
+    right: 20px;
 }
 
 .modal .more-details {
