--- a/Simulation_Galerie/css/style.css
+++ b/Simulation_Galerie/css/style.css
@@ -159,6 +159,28 @@ footer {
     transition: background 0.3s;
 }
 
+/* Fur die Details Seite */
+.btn {
+    display: inline-block;
+    margin: 10px 5px;
+    padding: 10px 20px;
+    color: white;
+    background-color: #333;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background 0.3s;
+}
+
+.btn:hover {
+    background-color: #555;
+}
+
+.navigation-buttons {
+    text-align: center;
+    margin-top: 20px;
+}
+
+
 .more-details a:hover {
     background: #555;
 }
