--- a/Simulation_Galerie/css/style.css
+++ b/Simulation_Galerie/css/style.css
@@ -164,7 +164,7 @@ footer {
     display: inline-block;
     margin: 10px 5px;
     padding: 10px 20px;
-    color: blue;
+    color: white;
     background-color: #333;
     text-decoration: none;
     border-radius: 5px;
