--- a/Simulation_Galerie/css/style.css
+++ b/Simulation_Galerie/css/style.css
@@ -109,6 +109,11 @@ footer {
     text-align: center;
     margin: 10px 0;
     font-size: 1.2rem;
+    
+    background: #333;
+    padding: 10px 15px;
+    border-radius: 5px;
+    transition: background 0.3s;
 }
 
 .modal .close {
