--- a/Simulation_Galerie/css/style.css
+++ b/Simulation_Galerie/css/style.css
@@ -110,11 +110,11 @@ footer {
     margin: 10px 0;
     font-size: 1.2rem;
     
-    background: rgba(0, 0, 0, 0.7);
+  background: black; /* rgba(0, 0, 0, 0.7); */
   color: white;
   text-align: center;
   padding: 0.5rem 0;
-  opacity: 0;
+  opacity: 0.9;
   transition: opacity 0.3s;
 }
 
